syntax = "proto3";

package promise_t;

option go_package = "github.com/resonatehq/resonate/internal/app/subsystems/api/grpc/pb";

message Promise {
    string id = 1;
    State state = 2;
    Value param = 3;
    Value value = 4;
    int64 timeout = 5;
    string idempotencyKeyForCreate = 6;
    string idempotencyKeyForComplete = 7;
    map<string, string> tags = 8;
    int64 createdOn = 9;
    int64 completedOn = 10;
}

enum State {
    PENDING = 0;
    RESOLVED = 1;
    REJECTED = 2;
    REJECTED_TIMEDOUT = 3;
    REJECTED_CANCELED = 4;
}

message Value {
    map<string, string> headers = 1;
    bytes data = 2;
}
